# jt-password-generator

./: .gitignore  README.md  build.sh  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: hosted.yml  hosted_test.yml  premise.yml  premise_build.yml  premise_test.yml
examples/: service.py
scripts/: distribute.sh
src/jt_password_generator/: managers.py
tests/: README.md  test_password_manager.py  test_seed_manager.py
