[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=66.1", "wheel"]

[project]
authors = [ { name="Jeremy Tan" } ]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10.12"
]
description = "JT Password Generator"
dynamic = ["version", "dependencies"]
name = "jt_password_generator"
requires-python = ">3.10.11"


[tool.setuptools.dynamic]
# dependencies = { file=["requirements.txt"] }
version = { attr = "jt_password_generator.VERSION" }


[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=jt_password_generator"
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 119

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
mypy_path = "src"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
